--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/css/index.min.css">
-    <link rel="shortcut icon" href="/src/assets/flag-for-japan_1f1ef-1f1f5.png" type="image/x-icon">
+    <link rel="stylesheet" href="./src/css/index.min.css">
+    <link rel="shortcut icon" href="./src/assets/flag-for-japan_1f1ef-1f1f5.png" type="image/x-icon">
     <title>Welcome to Japan</title>
 </head>
 <body>
