--- a/index.html
+++ b/index.html
@@ -12,17 +12,8 @@
     <div class="wrapper">
         <header>
             <div class="title">Travel</div>
-
             <nav class="navbar">
-
                 <ul>
-                    <button class="ham">
-                        <svg enable-background="new 0 0 50 50" version="1.1" viewBox="0 0 50 50" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
-                        <path d="m8.667 15h30c0.552 0 1-0.447 1-1s-0.448-1-1-1h-30c-0.552 0-1 0.447-1 1s0.447 1 1 1z" fill="#231F20"/>
-                        <path d="m8.667 37h30c0.552 0 1-0.447 1-1s-0.448-1-1-1h-30c-0.552 0-1 0.447-1 1s0.447 1 1 1z" fill="#231F20"/>
-                        <path d="m8.667 26h30c0.552 0 1-0.447 1-1s-0.448-1-1-1h-30c-0.552 0-1 0.447-1 1s0.447 1 1 1z" fill="#231F20"/>
-                        </svg>                     
-                    </button>
                     <li><a href="">highlights</a></li>
                     <li><a href="">Explore</a></li>
                     <li><a href="">Stay</a></li>
@@ -36,7 +27,7 @@
                     <div class="hero__title jap">
                         <p>ようこそ</p>
                     </div>                
-                    <h1>Welcome</h1>
+                    <h1>Welc<span>o</span>me</h1>
                 </div>
                 <div class="hero__text">
                     <p class="hero__country">Japan</p>
