--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/index.min.css">
     <link rel="shortcut icon" href="./src/assets/icon-jap.png" type="image/x-icon">
+    <meta name="description" content="日本へようこそ。美しい歴史を持つ素晴らしい国">
     <title>Welcome to Japan</title>
 </head>
 <body>
